--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,20 @@
-# 🐍 Backend Dockerfile
+# Use Python base image
 FROM python:3.10-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy backend code
-COPY backend/ /app/
+# Copy dependency files
+COPY requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose backend port
-EXPOSE 5001
+# Copy app code
+COPY . .
+
+# Expose Flask port
+EXPOSE 5000
 
 # Run Flask app
 CMD ["python", "app.py"]
