--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,13 +7,17 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-RUN npm run build --prod
+RUN npm run build --configuration=production
 
-# Stage 2: Serve using Nginx
+# Stage 2: Serve with Nginx
 FROM nginx:alpine
 
-COPY --from=build /app/dist/ /usr/share/nginx/html
+# Remove default Nginx page
+RUN rm -rf /usr/share/nginx/html/*
 
-EXPOSE 4200
+# Copy Angular build output (dist/frontend)
+COPY --from=build /app/dist/frontend /usr/share/nginx/html/
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
