--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,9 @@
-name: Build Flask Docker App
+name: Docker Compose Build
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -10,18 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker Image
+      - name: Build Docker Compose services
         run: |
-          docker build -t flask-app:latest .
-
-      - name: Run container for testing
-        run: |
-          docker run -d -p 5000:5000 --name flask_container flask-app:latest
-          sleep 5
-          docker ps -a
+          docker compose version
+          docker compose build
